bindings/matlab/proven_header.h

/* ========================================================================
 * Result structures
 * ======================================================================== */

struct IntResult   { int32_t status; int64_t value; };
struct BoolResult  { int32_t status; int32_t value; };
struct FloatResult { int32_t status; double  value; };
/*
 * StringResult - value must be freed with proven_free_string().
 * In MATLAB the char* is returned as a libpointer; use proven_free_string
 * when done.
 */
struct StringResult { int32_t status; char* value; int32_t length; };